# serde-config-docs

./: Cargo.toml  README.md
demo/: Cargo.toml
demo/src/: lib.rs
serde_config_docs_derive/: Cargo.toml
serde_config_docs_derive/src/: lib.rs
src/: lib.rs
